FLUID-4405 : Fixed line spacing with valid markup

--- a/src/webapp/demos/uiOptions/css/uiOptions.css
+++ b/src/webapp/demos/uiOptions/css/uiOptions.css
@@ -70,8 +70,12 @@ img {
     font-size: 1.25em;
     margin-bottom: 1em;
 }
+.instructions p {
+	padding-top: 5px;
+}
 .instructions .instruction-comment {
     font-size: 0.8em;
+	line-height: 1.4em;
 }
 .disp-opts-buttons {
     margin-top: 40px;
